[package]
name = "rusty-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "12.0.0", features = ["custom-bindings", "derive"] }
winreg = "0.7"
colored = "2.0"
crossterm = "0.22"

[build-dependencies]
winres = "0.1"